# attestor

./: .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  LICENSE  README.md  SPEC.md  conftest.py  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
adapters/checks/: command_check.py  db_check.py  file_check.py  git_check.py  http_check.py
adapters/notifier/: discord.py  stdout.py
adapters/store/: sqlite.py
attestor/: __init__.py  cli.py
core/: checker.py  evidence.py  ledger.py  maker.py  queue.py  shadow.py  watchdog.py
examples/fabrication_demo/: run_demo.py
schemas/: build-task.json  content-task.json  deploy-task.json
tests/: test_checker.py  test_evidence.py  test_maker.py  test_queue.py  test_shadow.py  test_watchdog.py
