[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "attestor"
version = "0.1.0"
description = "Accountability and verification layer for AI agent fleets — so that done means proven, not claimed."
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11"
keywords = ["ai", "agents", "accountability", "verification", "maker-checker", "segregation-of-duties"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Libraries",
]
dependencies = []   # Zero runtime dependencies — stdlib only

[project.scripts]
attestor = "attestor.cli:main"

[project.optional-dependencies]
dev = ["pytest>=7"]

[tool.pytest.ini_options]
# Add the workspace root (parent of this repo) so that `attestor` resolves as a
# namespace package and attestor.core.* / attestor.adapters.* are importable.
pythonpath = [".."]

[tool.setuptools.packages.find]
where = ["."]
include = ["attestor*"]
